syntax = "proto3";

package proto;

option go_package = "swrc/proto/pb";

message ModifySnippetTopicRequest{
    string snippet_topic_id = 1; 
    string title = 2;          
    string description = 3;    
    string status = 4;         
};